Remove compose and validate examples from ConfigIntro. (#17)

--- a/notebooks/02ConfigIntro.ipynb
+++ b/notebooks/02ConfigIntro.ipynb
@@ -13,7 +13,7 @@
     "- `compare` -- compares two config files\n",
     "- `validate` -- ensures that a given config file is structured properly\n",
     "\n",
-    "API examples of these tools are available from the `uwtools` __[Config notebook](https://github.com/ufs-community/uwtools/blob/main/notebooks/config.ipynb)__."
+    "We'll focus on `realize` and `compare` CLI in the Intro, and will continue to see examples of the other tools throughout the tutorial. API examples of these tools are available from the `uwtools` __[Config notebook](https://github.com/ufs-community/uwtools/blob/main/notebooks/config.ipynb)__."
    ]
   },
   {
@@ -38,6 +38,17 @@
     "* Supported formats also include INI, Fortran Namelist, Bash.\n",
     "* Can transform between compatible formats. All formats can be transformed to YAML.\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6250fb17-a4df-4b0a-ac9f-05e4c84a4961",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Tip:</b> Jupyter uses \"bash magic\" to run shell commands. One-liners use <b>!</b> while multi-line bash cells may use <b>%%bash</b> or <b>%%script</b> headers.\n",
+    "</div>\n"
    ]
   },
   {
@@ -161,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T11:22:55]    ERROR Config could not be realized. Try with --values-needed for details.\n"
+      "[2025-09-22T21:08:53]    ERROR Config could not be realized. Try with --values-needed for details.\n"
      ]
     }
    ],
@@ -187,18 +198,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T11:22:55]     INFO Keys that are complete:\n",
-      "[2025-09-22T11:22:55]     INFO   a\n",
-      "[2025-09-22T11:22:55]     INFO   a.pi\n",
-      "[2025-09-22T11:22:55]     INFO   b\n",
-      "[2025-09-22T11:22:55]     INFO   b.foo\n",
-      "[2025-09-22T11:22:55]     INFO   b.foo.pi\n",
-      "[2025-09-22T11:22:55]     INFO   b.bar\n",
-      "[2025-09-22T11:22:55]     INFO   b.bar.one\n",
-      "[2025-09-22T11:22:55]     INFO   b.bar.two\n",
-      "[2025-09-22T11:22:55]     INFO \n",
-      "[2025-09-22T11:22:55]     INFO Keys with unrendered Jinja2 variables/expressions:\n",
-      "[2025-09-22T11:22:55]     INFO   date: {{ cycle }}\n"
+      "[2025-09-22T21:08:53]     INFO Keys that are complete:\n",
+      "[2025-09-22T21:08:53]     INFO   a\n",
+      "[2025-09-22T21:08:53]     INFO   a.pi\n",
+      "[2025-09-22T21:08:53]     INFO   b\n",
+      "[2025-09-22T21:08:53]     INFO   b.foo\n",
+      "[2025-09-22T21:08:53]     INFO   b.foo.pi\n",
+      "[2025-09-22T21:08:53]     INFO   b.bar\n",
+      "[2025-09-22T21:08:53]     INFO   b.bar.one\n",
+      "[2025-09-22T21:08:53]     INFO   b.bar.two\n",
+      "[2025-09-22T21:08:53]     INFO \n",
+      "[2025-09-22T21:08:53]     INFO Keys with unrendered Jinja2 variables/expressions:\n",
+      "[2025-09-22T21:08:53]     INFO   date: {{ cycle }}\n"
      ]
     }
    ],
@@ -444,8 +455,7 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "cat b.ini"
+    "!cat b.ini"
    ]
   },
   {
@@ -494,125 +504,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "433a7cf5-7950-4fc6-8e3d-49fb6815d923",
-   "metadata": {},
-   "source": [
-    "# Running Compose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b58fbee0-47c5-442f-998c-ec1118c0d86b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "usage: uw config compose [-h] [--version] [--realize] [--output-file PATH]\n",
-      "                         [--input-format {ini,nml,sh,yaml}]\n",
-      "                         [--output-format {ini,nml,sh,yaml}] [--quiet]\n",
-      "                         [--verbose]\n",
-      "                         CONFIG [CONFIG ...]\n",
-      "\n",
-      "Compose configs\n",
-      "\n",
-      "positional arguments:\n",
-      "  CONFIG\n",
-      "\n",
-      "Optional arguments:\n",
-      "  -h, --help\n",
-      "      Show help and exit\n",
-      "  --version\n",
-      "      Show version info and exit\n",
-      "  --realize\n",
-      "      Render template expressions where possible\n",
-      "  --output-file PATH, -o PATH\n",
-      "      Path to output file (default: write to stdout)\n",
-      "  --input-format {ini,nml,sh,yaml}\n",
-      "      Input format (default: yaml)\n",
-      "  --output-format {ini,nml,sh,yaml}\n",
-      "      Output format (default: yaml)\n",
-      "  --quiet, -q\n",
-      "      Print no logging messages\n",
-      "  --verbose, -v\n",
-      "      Print all logging messages\n"
-     ]
-    }
-   ],
-   "source": [
-    "!uw config compose -h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "cfb45163-6fbd-4d64-9b78-956b0b2b8f3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foo:\n",
-      "  pi: 3.14\n",
-      "bar:\n",
-      "  one: 1\n",
-      "  two: 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat b.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "53321072-6947-47fc-a009-c2a580d4688c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bar:\n",
-      "  two: 42\n",
-      "  three: 3.0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat ci02.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "6454c157-6453-460f-bbcc-a54d19f82642",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bar:\n",
-      "  two: 2\n",
-      "  three: 3.0\n",
-      "  one: 1\n",
-      "foo:\n",
-      "  pi: 3.14\n"
-     ]
-    }
-   ],
-   "source": [
-    "!uw config compose ci02.yaml b.yaml "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5da6c874-24b5-4317-96ff-d3f53437470b",
    "metadata": {},
    "source": [
@@ -624,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "6ec34752-5b76-4b37-9115-a034243d1179",
    "metadata": {},
    "outputs": [
@@ -674,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "b96c20f3-dd72-4639-9ed0-123d4f83fb33",
    "metadata": {},
    "outputs": [
@@ -682,24 +573,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T11:22:58]     INFO - ci03.nml\n",
-      "[2025-09-22T11:22:58]     INFO + b.nml\n",
-      "[2025-09-22T11:22:58]     INFO ---------------------------------------------------------------------\n",
-      "[2025-09-22T11:22:58]     INFO ↓ ? = info | -/+ = line unique to - or + file | blank = matching line\n",
-      "[2025-09-22T11:22:58]     INFO ---------------------------------------------------------------------\n",
-      "[2025-09-22T11:22:58]     INFO   bar:\n",
-      "[2025-09-22T11:22:58]     INFO     one: 1\n",
-      "[2025-09-22T11:22:58]     INFO -   three: 3\n",
-      "[2025-09-22T11:22:58]     INFO     two: 2\n",
-      "[2025-09-22T11:22:58]     INFO   foo:\n",
-      "[2025-09-22T11:22:58]     INFO -   pi: 3.1415\n",
-      "[2025-09-22T11:22:58]     INFO ?           --\n",
-      "[2025-09-22T11:22:58]     INFO +   pi: 3.14\n"
+      "[2025-09-22T21:08:56]     INFO - ci02.nml\n",
+      "[2025-09-22T21:08:56]     INFO + b.nml\n",
+      "[2025-09-22T21:08:56]     INFO ---------------------------------------------------------------------\n",
+      "[2025-09-22T21:08:56]     INFO ↓ ? = info | -/+ = line unique to - or + file | blank = matching line\n",
+      "[2025-09-22T21:08:56]     INFO ---------------------------------------------------------------------\n",
+      "[2025-09-22T21:08:56]     INFO   bar:\n",
+      "[2025-09-22T21:08:56]     INFO     one: 1\n",
+      "[2025-09-22T21:08:56]     INFO -   three: 3\n",
+      "[2025-09-22T21:08:56]     INFO     two: 2\n",
+      "[2025-09-22T21:08:56]     INFO   foo:\n",
+      "[2025-09-22T21:08:56]     INFO -   pi: 3.1415\n",
+      "[2025-09-22T21:08:56]     INFO ?           --\n",
+      "[2025-09-22T21:08:56]     INFO +   pi: 3.14\n"
      ]
     }
    ],
    "source": [
-    "!uw config compare --path1 ci03.nml --path2 b.nml"
+    "!uw config compare --path1 ci02.nml --path2 b.nml"
    ]
   },
   {
@@ -712,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "faf8b1d7-ffb2-4a44-ae53-432533581fca",
    "metadata": {},
    "outputs": [
@@ -720,8 +611,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T11:22:58]     INFO - b.ini\n",
-      "[2025-09-22T11:22:58]     INFO + b.ini\n"
+      "[2025-09-22T21:08:56]     INFO - b.ini\n",
+      "[2025-09-22T21:08:56]     INFO + b.ini\n"
      ]
     }
    ],
@@ -731,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "64da1e0e-7b15-4ff4-89e7-abf2387d2cfb",
    "metadata": {},
    "outputs": [
@@ -739,196 +630,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T11:22:59]    ERROR Formats do not match: ini vs nml\n"
+      "[2025-09-22T21:08:56]    ERROR Formats do not match: ini vs nml\n"
      ]
     }
    ],
    "source": [
     "!uw config compare --path1 b.ini --path2 b.nml"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4334b4b6-c1f2-4eab-8d7c-189b5f9d3b76",
-   "metadata": {},
-   "source": [
-    "# Running Validate\n",
-    "\n",
-    "* Only validates YAML-formatted files from CLI\n",
-    "* Transform (if needed) and then validate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "c47e7d3a-a29f-44e2-ae09-ece4ed165308",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "usage: uw config validate --schema-file PATH [-h] [--version]\n",
-      "                          [--input-file PATH] [--quiet] [--verbose]\n",
-      "\n",
-      "Validate config\n",
-      "\n",
-      "Required arguments:\n",
-      "  --schema-file PATH\n",
-      "      Path to schema file to use for validation\n",
-      "\n",
-      "Optional arguments:\n",
-      "  -h, --help\n",
-      "      Show help and exit\n",
-      "  --version\n",
-      "      Show version info and exit\n",
-      "  --input-file PATH, -i PATH\n",
-      "      Path to input file (default: read from stdin)\n",
-      "  --quiet, -q\n",
-      "      Print no logging messages\n",
-      "  --verbose, -v\n",
-      "      Print all logging messages\n"
-     ]
-    }
-   ],
-   "source": [
-    "!uw config validate -h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "4c43342f-85f0-4127-847b-74d39d215163",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "&foo\n",
-      "  pi = 3.1415\n",
-      "/\n",
-      "&bar\n",
-      "  one = 1\n",
-      "  two = 2\n",
-      "  three = 3\n",
-      "/\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat ci03.nml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "6a2443cf-1da8-4a77-85f8-2d2177fc5cae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"$schema\": \"http://json-schema.org/draft-07/schema#\",\n",
-      "  \"additionalProperties\": false,\n",
-      "  \"properties\": {\n",
-      "    \"bar\": {\n",
-      "      \"additionalProperties\": false,\n",
-      "      \"properties\": {\n",
-      "        \"one\": {\n",
-      "          \"minval\": \"1\",\n",
-      "          \"type\": \"integer\"\n",
-      "        },\n",
-      "        \"three\": {\n",
-      "          \"type\": \"integer\"\n",
-      "        },\n",
-      "        \"two\": {\n",
-      "          \"type\": \"integer\"\n",
-      "        }\n",
-      "      },\n",
-      "      \"required\": [\n",
-      "        \"two\"\n",
-      "      ],\n",
-      "      \"type\": \"object\"\n",
-      "    },\n",
-      "    \"foo\": {\n",
-      "      \"additionalProperties\": false,\n",
-      "      \"properties\": {\n",
-      "        \"pi\": {\n",
-      "          \"type\": \"number\"\n",
-      "        }\n",
-      "      },\n",
-      "      \"required\": [\n",
-      "        \"pi\"\n",
-      "      ],\n",
-      "      \"type\": \"object\"\n",
-      "    }\n",
-      "  },\n",
-      "  \"required\": [\n",
-      "    \"foo\",\n",
-      "    \"bar\"\n",
-      "  ],\n",
-      "  \"type\": \"object\"\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat ci03.jsonschema"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "12267be5-c0ed-4a6a-b8e3-dc19779b2771",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-09-22T11:23:00]    DEBUG Command: uw config validate --schema-file ci03.jsonschema -v\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Dereferencing, current value:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]   foo:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     pi: 3.1415\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]   bar:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     one: 1\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     two: 2\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     three: 3\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: foo\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: foo\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: pi\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: pi\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Accepting: 3.1415\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: bar\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: bar\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: one\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: one\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Accepting: 1\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: two\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: two\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Accepting: 2\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendering: three\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Rendered: three\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Accepting: 3\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference] Dereferencing, final value:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]   foo:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     pi: 3.1415\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]   bar:\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     one: 1\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     two: 2\n",
-      "[2025-09-22T11:23:00]    DEBUG [dereference]     three: 3\n",
-      "[2025-09-22T11:23:00]    DEBUG Validating config against external schema file: ci03.jsonschema\n",
-      "[2025-09-22T11:23:00]     INFO Schema validation succeeded for config\n"
-     ]
-    }
-   ],
-   "source": [
-    "!uw config realize -i ci03.nml --output-format yaml | uw config validate --schema-file ci03.jsonschema -v"
    ]
   }
  ],
