--- a/notebooks/03YAML.ipynb
+++ b/notebooks/03YAML.ipynb
@@ -340,22 +340,26 @@
      "text": [
       "tt06.yaml:\n",
       "\n",
-      "nlev: 127\n",
-      "nx: 1440\n",
-      "ny: 721\n",
-      "points: !int '{{ nx * ny * nlev }}'\n",
-      "leadtimes: !list '[{% for n in range(6, 25, 6) %}{{ n }},{% endfor %}]'\n",
+      "const:\n",
+      "  nx: 1440\n",
+      "  ny: 721\n",
+      "var:\n",
+      "  nlev: 127\n",
+      "  points: !int '{{ const.nx * const.ny * nlev }}'\n",
+      "leadtimes: !list '[{% for n in range(6, 25, 6) %}\"{{ \"%03d\" % n }}\",{% endfor %}]'\n",
       "\n",
       "+ uw config realize -i tt06.yaml\n",
-      "nlev: 127\n",
-      "nx: 1440\n",
-      "ny: 721\n",
-      "points: 131856480\n",
+      "const:\n",
+      "  nx: 1440\n",
+      "  ny: 721\n",
+      "var:\n",
+      "  nlev: 127\n",
+      "  points: 131856480\n",
       "leadtimes:\n",
-      "- 6\n",
-      "- 12\n",
-      "- 18\n",
-      "- 24\n"
+      "- '006'\n",
+      "- '012'\n",
+      "- 018\n",
+      "- '024'\n"
      ]
     }
    ],
@@ -368,7 +372,7 @@
    "id": "676e4e12-d2f5-4b5f-8852-34f6274832f1",
    "metadata": {},
    "source": [
-    "This time, `points` is in fact an integer value, and `leadtimes` has been expanded into a proper YAML sequence of integer values.\n",
+    "This time, `points` is in fact an integer value, and `leadtimes` has been expanded into a proper YAML sequence of integer values. (YAML has quoted `006`, `012`, and `024` to prevent their interpretation as octal numbers; `018` cannot be octal, so YAML has left in unquoted because it is unambiguously a string.)\n",
     "\n",
     "Among the other tags available are two for working with time values:"
    ]
