--- a/notebooks/04Filesystem.ipynb
+++ b/notebooks/04Filesystem.ipynb
@@ -35,7 +35,9 @@
    "id": "38c96caa-76f6-4fa3-93a6-22f4de35e50a",
    "metadata": {},
    "source": [
-    "**Note:** The examples that follow call a helper script, `fsdemo`, from the code cells. The actual `uw` commands are shown in the output cells, preceded by `+`, and can be replicated in a shell when run from the `configs/` directory, possibly with the `--cycle` value updated to a more recent date."
+    "**Note:** The examples that follow call a helper script, `fsdemo`, from the code cells. The actual `uw` commands are shown in the output cells, preceded by `+`, and can be replicated in a shell when run from the `configs/` directory, possibly with the `--cycle` value updated to a more recent date.\n",
+    "\n",
+    "**Note:** The `/public` area on Hera provides a short rolling window of leading-edge forecast data, so it may be necessary to update the `--cycle` values in the cells below to specify an in-window cycle."
    ]
   },
   {
@@ -73,19 +75,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "+ uw fs link -c fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6\n",
-      "[2025-09-22T17:28:57]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T17:28:57]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T17:28:57]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
-      "[2025-09-22T17:28:57]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
-      "[2025-09-22T17:28:57]     INFO File links: Ready\n"
+      "+ uw fs link -c fs00.yaml --key-path to_link --cycle 2025-09-23T12 --leadtime 6\n",
+      "[2025-09-23T15:48:34]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-23T15:48:34]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-23T15:48:34]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526612000006: Executing\n",
+      "[2025-09-23T15:48:34]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526612000006: Ready\n",
+      "[2025-09-23T15:48:34]     INFO File links: Ready\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "rm -rf /tmp/fsdemo\n",
-    "fsdemo fs00 link --key-path to_link --cycle 2025-09-21T12 --leadtime 6"
+    "fsdemo fs00 link --key-path to_link --cycle 2025-09-23T12 --leadtime 6"
    ]
   },
   {
@@ -106,14 +108,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T17:28:58]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T17:28:58]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T17:28:58]     INFO File links: Ready\n"
+      "[2025-09-23T15:48:35]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-23T15:48:35]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-23T15:48:35]     INFO File links: Ready\n"
      ]
     }
    ],
    "source": [
-    "!uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6"
+    "!uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-23T12 --leadtime 6"
    ]
   },
   {
@@ -141,18 +143,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T17:28:58]     INFO Validating config against internal schema: files-to-stage\n",
-      "[2025-09-22T17:28:58]     INFO Schema validation succeeded for fs config\n",
-      "[2025-09-22T17:28:58]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Executing\n",
-      "[2025-09-22T17:28:58]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526412000006: Ready\n",
-      "[2025-09-22T17:28:58]     INFO File links: Ready\n"
+      "[2025-09-23T15:48:36]     INFO Validating config against internal schema: files-to-stage\n",
+      "[2025-09-23T15:48:36]     INFO Schema validation succeeded for fs config\n",
+      "[2025-09-23T15:48:36]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526612000006: Executing\n",
+      "[2025-09-23T15:48:36]     INFO Symlink /tmp/fsdemo/gribfile -> /public/data/grids/gfs/0p25deg/grib2/2526612000006: Ready\n",
+      "[2025-09-23T15:48:36]     INFO File links: Ready\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "rm -fv /tmp/fsdemo/gribfile\n",
-    "uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-21T12 --leadtime 6"
+    "uw fs link -c ../configs/fs00.yaml --key-path to_link --cycle 2025-09-23T12 --leadtime 6"
    ]
   },
   {
