A handful of updates from prep sessions. (#19)
Adds an environment.yml
Changes default locations for clone and output to a shared space on Hera
Renames Rocoto notebook to 07.

--- a/notebooks/02ConfigIntro.ipynb
+++ b/notebooks/02ConfigIntro.ipynb
@@ -71,14 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: uw config realize [-h] [--version] [--input-file PATH]\n",
-      "                         [--input-format {ini,nml,sh,yaml}]\n",
-      "                         [--update-file PATH]\n",
-      "                         [--update-format {ini,nml,sh,yaml}]\n",
-      "                         [--output-file PATH]\n",
-      "                         [--output-format {ini,nml,sh,yaml}]\n",
-      "                         [--key-path KEY[.KEY...]] [--values-needed] [--total]\n",
-      "                         [--dry-run] [--quiet] [--verbose]\n",
+      "usage: uw config realize [-h] [--version] [--input-file PATH] [--input-format {ini,nml,sh,yaml}] [--update-file PATH] [--update-format {ini,nml,sh,yaml}] [--output-file PATH] [--output-format {ini,nml,sh,yaml}] [--key-path KEY[.KEY...]]\n",
+      "                         [--values-needed] [--total] [--dry-run] [--quiet] [--verbose]\n",
       "\n",
       "Realize config\n",
       "\n",
@@ -87,15 +81,15 @@
       "      Show help and exit\n",
       "  --version\n",
       "      Show version info and exit\n",
-      "  --input-file PATH, -i PATH\n",
+      "  --input-file, -i PATH\n",
       "      Path to input file (default: read from stdin)\n",
       "  --input-format {ini,nml,sh,yaml}\n",
       "      Input format (default: yaml)\n",
-      "  --update-file PATH, -u PATH\n",
+      "  --update-file, -u PATH\n",
       "      Path to update file (default: read from stdin)\n",
       "  --update-format {ini,nml,sh,yaml}\n",
       "      Update format\n",
-      "  --output-file PATH, -o PATH\n",
+      "  --output-file, -o PATH\n",
       "      Path to output file (default: write to stdout)\n",
       "  --output-format {ini,nml,sh,yaml}\n",
       "      Output format (default: yaml)\n",
@@ -131,6 +125,32 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "af567ce5-0287-4c96-945f-128bc7b9c50c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:\n",
+      "  pi: 3.14\n",
+      "b:\n",
+      "  foo:\n",
+      "    pi: !float \"{{ a.pi }}\"\n",
+      "  bar:\n",
+      "    one: 1\n",
+      "    two: !int \"{{ b.bar.one + 1 }}\"\n",
+      "date: \"{{ cycle }}\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ci01.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f0e0d81e-b6af-46d0-890b-0bfc93ad8310",
    "metadata": {},
    "outputs": [
@@ -164,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "71901bb3-8f58-4c39-b54f-53fd19d73709",
    "metadata": {},
    "outputs": [
@@ -172,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T21:08:53]    ERROR Config could not be realized. Try with --values-needed for details.\n"
+      "[2025-09-23T19:37:18]    ERROR Config could not be realized. Try with --values-needed for details.\n"
      ]
     }
    ],
@@ -190,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b8c37333-2db8-44bf-8bae-ea84224f71eb",
    "metadata": {},
    "outputs": [
@@ -198,18 +218,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T21:08:53]     INFO Keys that are complete:\n",
-      "[2025-09-22T21:08:53]     INFO   a\n",
-      "[2025-09-22T21:08:53]     INFO   a.pi\n",
-      "[2025-09-22T21:08:53]     INFO   b\n",
-      "[2025-09-22T21:08:53]     INFO   b.foo\n",
-      "[2025-09-22T21:08:53]     INFO   b.foo.pi\n",
-      "[2025-09-22T21:08:53]     INFO   b.bar\n",
-      "[2025-09-22T21:08:53]     INFO   b.bar.one\n",
-      "[2025-09-22T21:08:53]     INFO   b.bar.two\n",
-      "[2025-09-22T21:08:53]     INFO \n",
-      "[2025-09-22T21:08:53]     INFO Keys with unrendered Jinja2 variables/expressions:\n",
-      "[2025-09-22T21:08:53]     INFO   date: {{ cycle }}\n"
+      "[2025-09-23T19:37:19]     INFO Keys that are complete:\n",
+      "[2025-09-23T19:37:19]     INFO   a\n",
+      "[2025-09-23T19:37:19]     INFO   a.pi\n",
+      "[2025-09-23T19:37:19]     INFO   b\n",
+      "[2025-09-23T19:37:19]     INFO   b.foo\n",
+      "[2025-09-23T19:37:19]     INFO   b.foo.pi\n",
+      "[2025-09-23T19:37:19]     INFO   b.bar\n",
+      "[2025-09-23T19:37:19]     INFO   b.bar.one\n",
+      "[2025-09-23T19:37:19]     INFO   b.bar.two\n",
+      "[2025-09-23T19:37:19]     INFO \n",
+      "[2025-09-23T19:37:19]     INFO Keys with unrendered Jinja2 variables/expressions:\n",
+      "[2025-09-23T19:37:19]     INFO   date: {{ cycle }}\n"
      ]
     }
    ],
@@ -229,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4e828071-389d-4135-a01b-037d12a75b5d",
    "metadata": {},
    "outputs": [
@@ -269,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "51b6cfe0-00e3-40b2-9463-2e20de9d0ee4",
    "metadata": {},
    "outputs": [
@@ -309,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "02d1311b-5dfd-4e21-8c2f-8a98586b2f63",
    "metadata": {},
    "outputs": [],
@@ -326,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7253bd2c-8ae6-4c4a-8d92-0ec6ed0cf385",
    "metadata": {},
    "outputs": [
@@ -368,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b1b4fa4a-18b1-471b-b228-70a1e54d0ff0",
    "metadata": {
     "scrolled": true
@@ -387,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bf09f766-d29c-4e22-80e1-086528f866f5",
    "metadata": {},
    "outputs": [
@@ -420,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8a14795a-7ccb-4a86-a812-8c7cb74f0ea7",
    "metadata": {},
    "outputs": [],
@@ -437,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3443394f-6e55-47b9-b4f9-22fc243b87f0",
    "metadata": {},
    "outputs": [
@@ -468,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "8277d0c0-4dc8-4a89-9219-f389fa46d573",
    "metadata": {},
    "outputs": [],
@@ -485,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c38b2114-89bb-44d2-be54-371e34a18575",
    "metadata": {},
    "outputs": [
@@ -515,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6ec34752-5b76-4b37-9115-a034243d1179",
    "metadata": {},
    "outputs": [
@@ -523,9 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: uw config compare --path1 PATH --path2 PATH [-h] [--version]\n",
-      "                         [--format1 {ini,nml,sh,yaml}]\n",
-      "                         [--format2 {ini,nml,sh,yaml}] [--quiet] [--verbose]\n",
+      "usage: uw config compare --path1 PATH --path2 PATH [-h] [--version] [--format1 {ini,nml,sh,yaml}] [--format2 {ini,nml,sh,yaml}] [--quiet] [--verbose]\n",
       "\n",
       "Compare configs\n",
       "\n",
@@ -565,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b96c20f3-dd72-4639-9ed0-123d4f83fb33",
    "metadata": {},
    "outputs": [
@@ -573,19 +591,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T21:08:56]     INFO - ci02.nml\n",
-      "[2025-09-22T21:08:56]     INFO + b.nml\n",
-      "[2025-09-22T21:08:56]     INFO ---------------------------------------------------------------------\n",
-      "[2025-09-22T21:08:56]     INFO ↓ ? = info | -/+ = line unique to - or + file | blank = matching line\n",
-      "[2025-09-22T21:08:56]     INFO ---------------------------------------------------------------------\n",
-      "[2025-09-22T21:08:56]     INFO   bar:\n",
-      "[2025-09-22T21:08:56]     INFO     one: 1\n",
-      "[2025-09-22T21:08:56]     INFO -   three: 3\n",
-      "[2025-09-22T21:08:56]     INFO     two: 2\n",
-      "[2025-09-22T21:08:56]     INFO   foo:\n",
-      "[2025-09-22T21:08:56]     INFO -   pi: 3.1415\n",
-      "[2025-09-22T21:08:56]     INFO ?           --\n",
-      "[2025-09-22T21:08:56]     INFO +   pi: 3.14\n"
+      "[2025-09-23T19:37:26]     INFO - ci02.nml\n",
+      "[2025-09-23T19:37:26]     INFO + b.nml\n",
+      "[2025-09-23T19:37:26]     INFO ---------------------------------------------------------------------\n",
+      "[2025-09-23T19:37:26]     INFO ↓ ? = info | -/+ = line unique to - or + file | blank = matching line\n",
+      "[2025-09-23T19:37:26]     INFO ---------------------------------------------------------------------\n",
+      "[2025-09-23T19:37:26]     INFO   bar:\n",
+      "[2025-09-23T19:37:26]     INFO     one: 1\n",
+      "[2025-09-23T19:37:26]     INFO -   three: 3\n",
+      "[2025-09-23T19:37:26]     INFO     two: 2\n",
+      "[2025-09-23T19:37:26]     INFO   foo:\n",
+      "[2025-09-23T19:37:26]     INFO -   pi: 3.1415\n",
+      "[2025-09-23T19:37:26]     INFO ?           --\n",
+      "[2025-09-23T19:37:26]     INFO +   pi: 3.14\n"
      ]
     }
    ],
@@ -603,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "faf8b1d7-ffb2-4a44-ae53-432533581fca",
    "metadata": {},
    "outputs": [
@@ -611,8 +629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T21:08:56]     INFO - b.ini\n",
-      "[2025-09-22T21:08:56]     INFO + b.ini\n"
+      "[2025-09-23T19:37:26]     INFO - b.ini\n",
+      "[2025-09-23T19:37:26]     INFO + b.ini\n"
      ]
     }
    ],
@@ -622,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "64da1e0e-7b15-4ff4-89e7-abf2387d2cfb",
    "metadata": {},
    "outputs": [
@@ -630,7 +648,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-22T21:08:56]    ERROR Formats do not match: ini vs nml\n"
+      "[2025-09-23T19:37:27]    ERROR Formats do not match: ini vs nml\n"
      ]
     }
    ],
@@ -655,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
