--- a/notebooks/06RunningDrivers.ipynb
+++ b/notebooks/06RunningDrivers.ipynb
@@ -22,7 +22,7 @@
     "import os\n",
     "from datetime import datetime, timedelta\n",
     "from pathlib import Path\n",
-    "uw_training = \"/scratch3/BMC/wrfruc/cholt/uw_training_prep/uw_training\"\n",
+    "uw_training = \"/scratch3/BMC/wrfruc/uw_training/uwtools_training\"\n",
     "os.environ[\"uw_training\"] = uw_training\n",
     "\n",
     "cycle = datetime(2025, 8, 27, 12)"
@@ -108,16 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac2a32f9-1b60-4377-838b-0f8edd5ee0b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ics.output"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "7fac0032-d71e-4501-9cbd-00190791d1d4",
    "metadata": {},
@@ -131,7 +121,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5d6cd3a1-7676-4ff5-9248-6e1634ab8e33",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%%script bash -l\n",
@@ -159,7 +151,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a07e805c-d1db-457a-ac3c-4d5874f15791",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%%script bash -l\n",
@@ -247,6 +241,14 @@
     "%%script bash -l\n",
     "$uw_training/scripts/run_forecast.sh $uw_training/configs/fv3_config.yaml 2025-08-27T13"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "768f326b-da82-4891-a772-e5feef9ccfac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -265,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
